// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step when they have not been added 1`] = `
{
  "embeddings": [
    {
      "data": "foo",
      "mime_type": "type/string",
    },
  ],
  "keyword": "Given",
  "result": {
    "status": "pending",
  },
}
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step which already has embeddings 1`] = `
{
  "arguments": [
    {
      "rows": [
        {
          "cells": [
            "Cucumber",
            "Cucumis sativus",
          ],
        },
        {
          "cells": [
            "Burr Gherkin",
            "Cucumis anguria",
          ],
        },
      ],
    },
  ],
  "embeddings": [
    {
      "data": "data-2",
      "mime_type": "mime_type-2",
    },
  ],
  "keyword": "Given",
}
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step which already has embeddings 2`] = `
{
  "arguments": [
    {
      "rows": [
        {
          "cells": [
            "Cucumber",
            "Cucumis sativus",
          ],
        },
        {
          "cells": [
            "Burr Gherkin",
            "Cucumis anguria",
          ],
        },
      ],
    },
  ],
  "embeddings": [
    {
      "data": "data-2",
      "mime_type": "mime_type-2",
    },
    {
      "data": "data-2",
      "mime_type": "mime_type-2",
    },
  ],
  "keyword": "Given",
}
`;

exports[`reporter on create should set the defaults only if the reportProperties option is provided 1`] = `
{
  "jsonFolder": "./tmp/jsons",
  "language": "en",
  "logFile": "tmp1/logFile.json",
  "outputDir": "tmp1",
}
`;

exports[`reporter on create should verify initial properties 1`] = `
{
  "jsonFolder": "./tmp/jsons",
  "language": "en",
  "logFile": "./.tmp/logFile.json",
  "outputDir": "./.tmp",
}
`;

exports[`reporter on create should verify initial properties 2`] = `{}`;

exports[`reporter on create should verify initial properties 3`] = `
{
  "feature": {
    "elements": [],
  },
}
`;

exports[`reporter onHookStart should add a pending after step 1`] = `
{
  "arguments": [],
  "keyword": "After",
  "line": "",
  "match": {
    "location": "can not be determined with webdriver.io",
  },
  "name": "",
  "result": {
    "duration": 0,
    "status": "passed",
  },
}
`;

exports[`reporter onHookStart should add a pending before step 1`] = `
{
  "arguments": [],
  "keyword": "Before",
  "line": "",
  "match": {
    "location": "can not be determined with webdriver.io",
  },
  "name": "",
  "result": {
    "duration": 0,
    "status": "passed",
  },
}
`;

exports[`reporter onSuiteStart should add a scenario to the feature if the feature is already there 1`] = `
[
  {
    "description": "",
    "id": "test;test",
    "keyword": "Scenario",
    "name": "test",
    "steps": [],
    "tags": [],
    "type": undefined,
  },
]
`;

exports[`reporter onSuiteStart should add the CucumberJS feature object if it is not available 1`] = `{}`;

exports[`reporter onSuiteStart should add the CucumberJS feature object if it is not available 2`] = `
{
  "feature": {
    "metadata": null,
  },
}
`;
